--- a/app/views/partials/header.ejs
+++ b/app/views/partials/header.ejs
@@ -2,8 +2,9 @@
     <head>
         <title>Schedule Assistant</title>
         <link  rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+        <link  rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+        <link  href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+        <link  href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
         <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
         <script src="lib/jquery.mCustomScrollbar.concat.min.js"></script>
         <link  rel="stylesheet" type="text/css" href= "lib/jquery.mCustomScrollbar.min.css">
