--- a/app/public/stylesheets/chat.css
+++ b/app/public/stylesheets/chat.css
@@ -3,7 +3,8 @@
 --------------------*/
 
 .chatbox-header {
-    background: #C2C0E7;
+    background: -webkit-linear-gradient(330deg, rgba(211, 168, 234, 0.2), rgba(211, 168, 234, 0.5));
+    background: linear-gradient(120deg, rgba(211, 168, 234, 0.2), rgba(211, 168, 234, 0.5));
 }
 
 .chatbox-title {
@@ -14,6 +15,55 @@
     padding: 10px;
     text-align: center;
     vertical-align: middle;
+}
+
+/*--------------------
+    CHAT FOOTER
+--------------------*/
+.message-box {
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 1 40px;
+      -ms-flex: 0 1 40px;
+          flex: 0 1 40px;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.3);
+  padding: 10px;
+  position: relative;
+}
+.message-box .message-input {
+  background: none;
+  border: none;
+  outline: none !important;
+  resize: none;
+  color: rgba(255, 255, 255, 0.7);
+  font-size: 11px;
+  height: 17px;
+  margin: 0;
+  padding-right: 20px;
+  width: 265px;
+}
+.message-box textarea:focus:-webkit-placeholder {
+  color: transparent;
+}
+.message-box .message-submit {
+  position: absolute;
+  z-index: 1;
+  top: 9px;
+  right: 10px;
+  color: #fff;
+  border: none;
+  background: #248A52;
+  font-size: 10px;
+  text-transform: uppercase;
+  line-height: 1;
+  padding: 6px 10px;
+  border-radius: 10px;
+  outline: none !important;
+  -webkit-transition: background .2s ease;
+  transition: background .2s ease;
+}
+.message-box .message-submit:hover {
+  background: #1D7745;
 }
 
 /*--------------------
@@ -48,15 +98,13 @@ Messages
   -webkit-flex: 1 1 auto;
       -ms-flex: 1 1 auto;
           flex: 1 1 auto;
-  color: rgba(0, 0, 0, 0.5);
+  color: white;
   overflow: hidden;
   position: relative;
   width: 100%;
 }
 .messages .messages-content {
   position: absolute;
-  top: 0;
-  left: 0;
   height: 101%;
   width: 100%;
 }
@@ -65,19 +113,20 @@ Messages
   float: left;
   padding: 6px 10px 7px;
   border-radius: 10px;
-  background: rgba(0, 0, 0, 0.3);
+  background: rgba(211, 168, 234, 0.89);
+  /*background: -webkit-linear-gradient(330deg, rgba(36, 138, 82, 0.5), rgba(37, 114, 135, 0.8));
+  background: linear-gradient(120deg, rgba(255, 171, 132, 0.6), rgba(211, 168, 234, 0.7));*/
+  color: rgba(255, 255, 255, 1);
   margin: 8px 0;
   font-size: 11px;
   line-height: 1.4;
-  margin-left: 35px;
   position: relative;
-  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
 }
 .messages .message .timestamp {
   position: absolute;
   bottom: -15px;
-  font-size: 9px;
-  color: rgba(255, 255, 255, 0.3);
+  font-size: 10px;
+  color: rgba(0, 0, 0, 0.5);
 }
 .messages .message .avatar {
   position: absolute;
@@ -96,20 +145,12 @@ Messages
   width: 100%;
   height: auto;
 }
-.messages .message.message-personal {
+.messages .message.user-message {
   float: right;
   color: #fff;
   text-align: right;
-  background: -webkit-linear-gradient(330deg, #248A52, #257287);
-  background: linear-gradient(120deg, #248A52, #257287);
-}
-.messages .message.message-personal::before {
-  left: auto;
-  right: 0;
-  border-right: none;
-  border-left: 5px solid transparent;
-  border-top: 4px solid #257287;
-  bottom: -4px;
+  background: rgba(255, 255, 255, 0.9);
+  color: rgba(0, 0, 0, 0.7);
 }
 .messages .message:last-child {
   margin-bottom: 30px;
@@ -186,55 +227,6 @@ Messages
   margin-left: 7px;
   -webkit-animation-delay: .3s;
           animation-delay: .3s;
-}
-
-/*--------------------
-Message Box
---------------------*/
-.message-box {
-  -webkit-box-flex: 0;
-  -webkit-flex: 0 1 40px;
-      -ms-flex: 0 1 40px;
-          flex: 0 1 40px;
-  width: 100%;
-  background: rgba(0, 0, 0, 0.3);
-  padding: 10px;
-  position: relative;
-}
-.message-box .message-input {
-  background: none;
-  border: none;
-  outline: none !important;
-  resize: none;
-  color: rgba(255, 255, 255, 0.7);
-  font-size: 11px;
-  height: 17px;
-  margin: 0;
-  padding-right: 20px;
-  width: 265px;
-}
-.message-box textarea:focus:-webkit-placeholder {
-  color: transparent;
-}
-.message-box .message-submit {
-  position: absolute;
-  z-index: 1;
-  top: 9px;
-  right: 10px;
-  color: #fff;
-  border: none;
-  background: #248A52;
-  font-size: 10px;
-  text-transform: uppercase;
-  line-height: 1;
-  padding: 6px 10px;
-  border-radius: 10px;
-  outline: none !important;
-  -webkit-transition: background .2s ease;
-  transition: background .2s ease;
-}
-.message-box .message-submit:hover {
-  background: #1D7745;
 }
 
 /*--------------------
