--- a/app/public/stylesheets/chat.css
+++ b/app/public/stylesheets/chat.css
@@ -1,74 +1,7 @@
 /*--------------------
-    CHAT HEADER
+    CHAT
 --------------------*/
 
-.chatbox-header {
-    background: -webkit-linear-gradient(330deg, rgba(211, 168, 234, 0.2), rgba(211, 168, 234, 0.5));
-    background: linear-gradient(120deg, rgba(211, 168, 234, 0.2), rgba(211, 168, 234, 0.5));
-}
-
-.chatbox-title {
-    color: white;
-    font-size: 22px;
-    font-weight: 100;
-    margin: 0;
-    padding: 10px;
-    text-align: center;
-    vertical-align: middle;
-}
-
-/*--------------------
-    CHAT FOOTER
---------------------*/
-.message-box {
-  -webkit-box-flex: 0;
-  -webkit-flex: 0 1 40px;
-      -ms-flex: 0 1 40px;
-          flex: 0 1 40px;
-  width: 100%;
-  background: rgba(0, 0, 0, 0.3);
-  padding: 10px;
-  position: relative;
-}
-.message-box .message-input {
-  background: none;
-  border: none;
-  outline: none !important;
-  resize: none;
-  color: rgba(255, 255, 255, 0.7);
-  font-size: 11px;
-  height: 17px;
-  margin: 0;
-  padding-right: 20px;
-  width: 265px;
-}
-.message-box textarea:focus:-webkit-placeholder {
-  color: transparent;
-}
-.message-box .message-submit {
-  position: absolute;
-  z-index: 1;
-  top: 9px;
-  right: 10px;
-  color: #fff;
-  border: none;
-  background: #248A52;
-  font-size: 10px;
-  text-transform: uppercase;
-  line-height: 1;
-  padding: 6px 10px;
-  border-radius: 10px;
-  outline: none !important;
-  -webkit-transition: background .2s ease;
-  transition: background .2s ease;
-}
-.message-box .message-submit:hover {
-  background: #1D7745;
-}
-
-/*--------------------
-    CHAT BODY
---------------------*/
 .chat {
     box-shadow: 0 5px 30px rgba(0, 0, 0, 0.2);
     display: -webkit-box;
@@ -91,7 +24,94 @@
 }
 
 /*--------------------
-Messages
+    CHAT HEADER
+--------------------*/
+.chatbox-header {
+    background: red; /* For browsers that do not support gradients */
+    background: -webkit-linear-gradient(-90deg, red, yellow); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(-90deg, red, yellow); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(-90deg, red, yellow); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(90deg, rgba(89, 204, 173, 0.2), rgba(89, 204, 173, 0.7)); /* Standard syntax */
+}
+
+.chatbox-title {
+    color: white;
+    font-size: 22px;
+    font-weight: 100;
+    margin: 0;
+    padding: 10px;
+    text-align: center;
+    vertical-align: middle;
+}
+
+/*--------------------
+    CHAT FOOTER
+--------------------*/
+.message-box {
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 1 40px;
+      -ms-flex: 0 1 40px;
+          flex: 0 1 40px;
+  width: 100%;
+  background: rgba(255, 255, 255, 0.4);
+  padding: 10px;
+  position: relative;
+}
+.message-box .message-input {
+  background: none;
+  border: none;
+  outline: none !important;
+  resize: none;
+  color: white;
+  font-size: 11px;
+  height: 17px;
+  margin: 0;
+  padding-right: 20px;
+  width: 265px;
+}
+
+.message-box textarea:focus:-webkit-placeholder {
+  color: transparent;
+}
+
+.message-box .message-input::-webkit-input-placeholder { /* Chrome */
+  color: rgba(255, 255, 255, 0.7);
+}
+.message-box .message-input:-ms-input-placeholder { /* IE 10+ */
+  color: rgba(255, 255, 255, 0.7);
+}
+.message-box .message-input::-moz-placeholder { /* Firefox 19+ */
+  color: rgba(255, 255, 255, 0.7);
+  opacity: 1;
+}
+.message-box .message-input::-moz-placeholder { /* Firefox 4 - 18 */
+  color: rgba(255, 255, 255, 0.7);
+  opacity: 1;
+}
+
+.message-box .message-submit {
+  position: absolute;
+  z-index: 1;
+  top: 9px;
+  right: 10px;
+  color: #fff;
+  border: none;
+  background: rgba(30, 150, 110, 0.7);
+  font-size: 10px;
+  text-transform: uppercase;
+  line-height: 1;
+  padding: 6px 10px;
+  border-radius: 10px;
+  outline: none !important;
+  -webkit-transition: background .2s ease;
+  transition: background .2s ease;
+}
+.message-box .message-submit:hover {
+  background: rgba(30, 200, 130, 0.5);
+}
+
+/*--------------------
+    CHAT BODY
 --------------------*/
 .messages {
   -webkit-box-flex: 1;
@@ -113,10 +133,8 @@ Messages
   float: left;
   padding: 6px 10px 7px;
   border-radius: 10px;
-  background: rgba(211, 168, 234, 0.89);
-  /*background: -webkit-linear-gradient(330deg, rgba(36, 138, 82, 0.5), rgba(37, 114, 135, 0.8));
-  background: linear-gradient(120deg, rgba(255, 171, 132, 0.6), rgba(211, 168, 234, 0.7));*/
-  color: rgba(255, 255, 255, 1);
+  background: rgba(89, 204, 173, 0.7);
+  color: rgba(255, 255, 255, 0.9);
   margin: 8px 0;
   font-size: 11px;
   line-height: 1.4;
@@ -149,7 +167,7 @@ Messages
   float: right;
   color: #fff;
   text-align: right;
-  background: rgba(255, 255, 255, 0.9);
+  background: rgba(255, 255, 255, 0.7);
   color: rgba(0, 0, 0, 0.7);
 }
 .messages .message:last-child {
