add communication between server and client for users messages

--- a/app/views/chatbot.ejs
+++ b/app/views/chatbot.ejs
@@ -1,8 +1,9 @@
 <% include ./partials/header %>
+
 <div class="row rtl">
     <div class="col-xs-12 main-view">
         <div class="main-view-content">
-            <p>This is the main view. This is the main view. </p>
+            <p>This is the main view.</p>
         </div>
     </div>
 
@@ -27,6 +28,5 @@
         </div>
     </div>
 </div>
-
 <script src="scripts/chat.js"></script>
 <% include ./partials/footer %>
