--- a/app/views/chatbot.ejs
+++ b/app/views/chatbot.ejs
@@ -3,7 +3,7 @@
 <div class="row rtl">
     <div class="col-xs-12 main-view">
         <div class="main-view-content">
-            <p>This is the main view.</p>
+            <iframe id="calendar" src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showNav=0&amp;showPrint=0&amp;showCalendars=0&amp;showTz=0&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=scheduleassistantdemo%40gmail.com&amp;color=%231B887A&amp;src=en.usa%23holiday%40group.v.calendar.google.com&amp;color=%23125A12&amp;ctz=America%2FDenver"></iframe>
         </div>
     </div>
 
