--- a/app/public/stylesheets/chat.css
+++ b/app/public/stylesheets/chat.css
@@ -62,7 +62,7 @@
   border: none;
   outline: none !important;
   resize: none;
-  color: white;
+  color: grey;
   font-size: 11px;
   height: 17px;
   margin: 0;
@@ -75,7 +75,8 @@
 }
 
 .message-box .message-input::-webkit-input-placeholder { /* Chrome */
-  color: rgba(255, 255, 255, 0.7);
+  color: lightgrey;
+  /*color: rgba(255, 255, 255, 0.7);*/
 }
 .message-box .message-input:-ms-input-placeholder { /* IE 10+ */
   color: rgba(255, 255, 255, 0.7);
