--- a/app/views/chatbot.ejs
+++ b/app/views/chatbot.ejs
@@ -1,5 +1,17 @@
 <% include ./partials/header %>
 
+<div class="popup">
+    <p id="title">Welcome to Scheduling Assistant!</p>
+    <br>
+    <p>Type or speak to send me a message.</p>
+    <p>I can help you schedule a meeting or show you your agenda.</p>
+    <br>
+    <p class="eg">"Can you schedule my meeting at 3pm on Saturday?"</p>
+    <p class="eg">"What are my events for the next few days?"</p>
+    <br>
+    <p class="start">Click anywhere to start</p>
+</div>
+
 <div class="row rtl">
     <div class="col-xs-12 main-view">
         <div class="main-view-content">
